# hf-cli

./: Cargo.toml  README.md  install-linux.sh  install-mac.sh
src/: main.rs
